Revision 67 	 2010-10-16 	 Changing logic in create_revision_file.sh 
Revision 66 	 2010-10-07 	 Cleanup to sourceforge scripts 
Revision 65 	 2010-09-30 	 Adding github and bitbucket backup to cron 
Revision 64 	 2010-09-30 	 Backup github and bitbucket to sourceforge 
Revision 63 	 2010-09-17 	 Chaning time of dropbox cron to let the mysql backup finish 
Revision 62 	 2010-09-15 	 Fixing path issue in drpbox backup script 
Revision 61 	 2010-09-15 	 Added script to backup to dropbox 
Revision 60 	 2010-09-09 	 Fixing Birthday reminedrs issue 
Revision 59 	 2010-09-07 	 Adding refresh planet to crontab 
Revision 58 	 2010-09-06 	 Adding blogs-planet to repos 
Revision 57 	 2010-08-31 	 Changing github url 
Revision 56 	 2010-08-30 	 Backup hg repos to github.com using hg-git 
Revision 55 	 2010-08-23 	 Changing Greetings app 
Revision 54 	 2010-08-10 	 Changing VERSION to version.py to make imports easier 
Revision 53 	 2010-08-09 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Revision 52 	 2010-08-09 	 added pysis to backups 
Revision 51 	 2010-08-09 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Revision 50 	 2010-07-30 	 Fixing issue with fill_boost_cache.sh 
Revision 49 	 2010-08-09 	 Small Changes 
Revision 48 	 2010-07-28 	 Delete http_proxy 
Revision 47 	 2010-07-16 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Revision 46 	 2010-07-16 	 Change to push_drupal_to_bitbucket.sh 
Revision 45 	 2010-07-16 	 Automated merge with ssh://hg@bitbucket.org/dkmurthy/scripty 
Revision 44 	 2010-07-16 	 Small cleanup to mercurial/sync_mercurial_repos.sh 
Revision 43 	 2010-07-16 	 Adding BASH_ENV variable to crontab 
Revision 42 	 2010-07-16 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Revision 41 	 2010-07-15 	 Added crontab entry to sync mercurial repos in LAN 
Revision 40 	 2010-07-15 	 Added fetch_vidyalaya_active_directory_repo.sh 
Revision 39 	 2010-07-15 	 Cleanup of update_redmine_on_server.sh script 